ns-system/components/builder-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns-builder

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-builder
  template:
    metadata:
      labels:
        app: ns-builder
    spec:
      enableServiceLinks: false
      serviceAccountName: ns-builder

      volumes:
        - name: buildpack
          emptyDir: {}
        - name: socket
          emptyDir: {}
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys
        - name: known-hosts
          configMap:
            name: known-hosts

      containers:
        - name: buildpack
          image: ghcr.io/motoki317/builder-arm:latest
          # image: paketobuildpacks/builder:full
          imagePullPolicy: Always
          command:
            - sleep
            - infinity
          volumeMounts:
            - mountPath: /workspace
              name: buildpack

        - name: buildkitd
          image: moby/buildkit:latest
          imagePullPolicy: Always
          args:
            - --addr
            - unix:///run/buildkit/buildkitd.sock
          readinessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          livenessProbe:
            exec:
              command:
                - buildctl
                - debug
                - workers
            initialDelaySeconds: 5
            periodSeconds: 30
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /run/buildkit
              name: socket

        - name: builder
          image: ns-builder
          imagePullPolicy: Always
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - mountPath: /neoshowcase/buildpack
              name: buildpack
            - mountPath: /run/buildkit
              name: socket
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /keys
              name: keys
            - mountPath: /root/.ssh/known_hosts
              name: known-hosts
              subPath: known_hosts
