ns-system/components/gitea-integration-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ns-gitea-integration

spec:
  replicas: 1
  podManagementPolicy: Parallel
  revisionHistoryLimit: 0
  serviceName: ns-gitea-integration
  selector:
    matchLabels:
      app: ns-gitea-integration
  template:
    metadata:
      labels:
        app: ns-gitea-integration
    spec:
      enableServiceLinks: false
      volumes:
        - name: config
          configMap:
            name: ns-config

      containers:
        - name: ns-gitea-integration
          image: ns-gitea-integration
          imagePullPolicy: Always
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
