ns-system/components/ssgen-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ns-ssgen

spec:
  serviceName: ns-ssgen
  podManagementPolicy: Parallel
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ns-ssgen

  # Persistence is not strictly required - only for performance between container restarts
  persistentVolumeClaimRetentionPolicy:
    whenScaled: Delete
    whenDeleted: Delete
  volumeClaimTemplates:
    - metadata:
        name: artifacts
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

  template:
    metadata:
      labels:
        app: ns-ssgen
    spec:
      enableServiceLinks: false
      volumes:
        - name: config
          configMap:
            name: ns-config
        - name: keys
          secret:
            secretName: ns-keys

      containers:
        - name: ns-ssgen
          image: ns-ssgen
          imagePullPolicy: Always
          args:
            - --loglevel=debug
            - --config=/opt/config/ns.yaml
          volumeMounts:
            - mountPath: /artifacts
              name: artifacts
            - mountPath: /opt/config/ns.yaml
              name: config
              subPath: ns.yaml
            - mountPath: /keys
              name: keys
          ports:
            - containerPort: 8081
              name: probe
          startupProbe:
            httpGet:
              port: probe
              path: /healthz
            periodSeconds: 1
            failureThreshold: 300
          readinessProbe:
            httpGet:
              port: probe
              path: /healthz
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              port: probe
              path: /healthz

        - name: caddy
          image: caddy:2-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /artifacts
              name: artifacts
