ns-system/components/ns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns

spec:
  type: ClusterIP
  selector:
    app: ns
  ports:
    - port: 5000
      targetPort: grpc
      name: grpc
    - port: 10000
      targetPort: component
      name: component
