ns-system/components/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ns

spec:
  entryPoints:
    - websecure
  tls:
    secretName: ns-tls
  routes:
    - kind: Rule
      match: Host(`ns.toki317.dev`)
      middlewares:
        - name: auth
          namespace: traefik
      services:
        - namespace: ns-system
          kind: Service
          name: ns-dashboard
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
    - kind: Rule
      match: Host(`ns.toki317.dev`) && PathPrefix(`/neoshowcase.protobuf.APIService`)
      middlewares:
        - name: auth
          namespace: traefik
      services:
        - namespace: ns-system
          kind: Service
          name: ns-gateway
          port: http
          scheme: h2c
          strategy: RoundRobin
          weight: 1
