ns-system/components/ssh-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ns-ssh

spec:
  entryPoints:
    - ns-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - namespace: ns-system
          name: ns-gateway
          port: ssh
          weight: 1
